--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{ "dependencies": { "@easypost/api": "^7.3.0", "airtable": "^0.12.2", "dotenv": "^16.4.5", "easypost": "^0.1.1" } }
+{ "dependencies": { "@easypost/api": "^7.3.0", "airtable": "^0.12.2", "dotenv": "^16.4.5", "easypost": "^0.1.1", "fast-csv": "^5.0.1", "tracking-url": "^1.0.1" } }
